--- a/.github/workflows/Mobile-Android.yml
+++ b/.github/workflows/Mobile-Android.yml
@@ -44,7 +44,7 @@ jobs:
           haxelib install flixel-addons
           haxelib install flxanimate
           haxelib install json2object
-          haxelib git polymod https://github.com/PabloelproxD210/Polymod.git
+          https://github.com/T5mpler/polymod-dnb
           haxelib git hscript https://github.com/T5mpler/hscript-dnb
           haxelib install hxvlc
           haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
@@ -52,7 +52,7 @@ jobs:
           haxelib run hmm install
 
       - name: Install Polymod
-        run: haxelib git polymod https://github.com/PabloelproxD210/Polymod.git
+        run: https://github.com/T5mpler/polymod-dnb
 
       - name: Configure Android
         run: |
